title spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -330,6 +330,7 @@ p
         padding-top: 5px;
         line-height: 0px;
         padding-bottom: 30px;
+        float: left;
     }
 
 #team h5
